--- a/.lando.yml
+++ b/.lando.yml
@@ -15,6 +15,7 @@ services:
         DATABASE_NAME: rails
     build:
       - bundle install
+      - yarn
   database:
     type: mariadb
     creds:
@@ -32,4 +33,6 @@ tooling:
   bundle:
     service: appserver
   rake:
+    service: appserver
+  yarn:
     service: appserver
