--- a/.lando.yml
+++ b/.lando.yml
@@ -10,6 +10,7 @@ services:
       command: "bundle exec rails server -b 0.0.0.0 -p 3000"
       user: root
       environment:
+        GEM_HOME: /app/vendor
         BUNDLE_DEFAULT_INSTALL_USERS_PATH: /app/vendor
         DATABASE_HOST: database
         DATABASE_NAME: rails
